--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -15,6 +15,7 @@
     "com.unity.analytics": "3.5.3",
     "com.unity.cinemachine": "2.6.2",
     "com.unity.collab-proxy": "1.3.9",
+    "com.unity.ide.rider": "1.2.1",
     "com.unity.ide.visualstudio": "2.0.3",
     "com.unity.ide.vscode": "1.2.2",
     "com.unity.purchasing": "2.1.1",
