--- a/Assets/Scenes/Boids/BoidsTest.asmdef
+++ b/Assets/Scenes/Boids/BoidsTest.asmdef
@@ -2,7 +2,9 @@
     "name": "BoidsTest",
     "rootNamespace": "",
     "references": [
-        "GUID:3aa9d4cbe4acac0459209e4656723ee8"
+        "GUID:3aa9d4cbe4acac0459209e4656723ee8",
+        "GUID:d8b63aba1907145bea998dd612889d6b",
+        "GUID:2665a8d13d1b3f18800f46e256720795"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
