--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "com.unity.2d.sprite": "1.0.0",
     "com.unity.analytics": "3.5.3",
+    "com.unity.animation.rigging": "1.0.3",
+    "com.unity.burst": "1.4.4",
     "com.unity.cinemachine": "2.6.2",
     "com.unity.collab-proxy": "1.3.9",
     "com.unity.ide.rider": "2.0.7",
